# Openfc_2040FYP_DUAL_CORE

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  default.px4board  params_openfc2040.txt  progress.md  progress_new.md  px4-rp2040.md  suggested_edits_change_log.md  test_checklist.md
.copilot/: todo.txt
PX4-Autopilot/: Makefile  raspberrypi_pico_default.uf2
PX4-Autopilot/cmake/: px4_git.cmake
docs/: BUZZER-IMPLEMENTATION.md  DEBUG_GUIDE.md  DPS310_SPI_FIX_REPORT.md  DUAL_CONSOLE_SETUP.md  GIT_QUICK_REFERENCE.md  GPS_MAG_SETUP.md  HARDWARE-CONNECTION-FUNCTION.md  LED-IMPLEMENTATION.md  LSM6DS3_SPI_FIX_REPORT.md  NEXT_STEPS.md  OVERCLOCKING_RP2040.md  PIN_CONNECTIONS.md  PROJECT_CONTEXT.md  PROPOSED_NEXT_STEPS.md  QGC_CONNECTION_FIX.md  QGROUNDCONTROL_CONNECTION.md  RC_INPUT_PWM_OUTPUT_FIX_REPORT.md  README.md  REPO_RECOVERY_PLAYBOOK.md  RP2350B_STM32F103_IO_SETUP.md  SD_CARD_SETUP.md  TASK_CHECKLIST.md  UART_CONSOLE_FIX_SUMMARY.md  UART_CONSOLE_TROUBLESHOOTING.md  context.txt  lsm6ds3-datasheet.md  lsm6ds3-summary-datasheet.md  rp2040-pinout.txt  task-checklist.md
firmware/test-firmware/: FLASH.uf2  SK.uf2  bhakri.uf2  buzz.uf2  buzznew.uf2  dec18_1125.uf2  deconfiguncomment.uf2  eda.uf2  ekf2.uf2  feb23_test3.uf2  flash.uf2  goa.uf2  gps_mag_external_optional.uf2  hello.uf2  i2c.uf2  lsm6ds3_10hz.uf2  (+26 more)
firmware/test-firmware/peripherals_testing/: .gitignore  CALIBRATION_GUIDE.md  CMakeLists.txt  Makefile  README.md
firmware/test-firmware/peripherals_testing/include/: openfc2040_board.h
firmware/test-firmware/peripherals_testing/scripts/: build.sh  flash.sh
firmware/test-firmware/peripherals_testing/src/: main.c  main_backup.c  main_complex.c
hardware/: openfc2040_pinout.txt
peripheral_testing/: CMakeLists.txt  build.sh  pico_sdk_import.cmake
peripheral_testing/include/: adc.h  baro.h  board_config.h  imu.h  led.h  pwm.h  spi.h  uart.h
peripheral_testing/src/: adc.c  baro.c  imu.c  led.c  main.c  pwm.c  sd_card.c  spi.c  uart.c
scripts/: setup_workspace.sh  test_uart_connection.sh
src/: board_config.h  init.c
(+562 files in other folders)
